--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -13,8 +14,8 @@
 
 <body>
 
-  <main>
-  <div class="container">
+  <main class="container">
+    <div class="card">
     <img src="images/illustration-hero.svg" alt="Woman Dancing">
    
       
@@ -37,29 +38,17 @@
 
       </div>
       
-      <a href="#" class="change">Change</a>
+      <a href="https://www.frontendmentor.io/" class="change" aria-label="Change your plan">Change</a>
   
       </div>
-      <a href="#" class="proceedButton">
+      <a href="https://www.frontendmentor.io/" class="proceedButton" aria-label="Proceed with plan signup">
         <P>Proceed to Payment</P>
       </a>
-      <a href="#" class="cancelButton">
+      <a href="https://www.frontendmentor.io/" class="cancelButton" aria-label="Cancel your plan">
         <p>Cancel Order</p>
        </a>
-  </div>
- 
-
-  
-
-  
-
-  
-
- 
- 
-  
- 
-</main>
+    </div>
+  </main>
 <div class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
   Coded by <a href="#">Max Kaiser</a>.
